Worked with tutor today. Decided to abandon plans for adding HTML through JS and just hardcoded it. Added my save and recall features and started working on the color coding. The code looks right, but it's not showing up correctly. Need to take another look at the CSS.

--- a/assets/style.css
+++ b/assets/style.css
@@ -25,6 +25,12 @@ body {
     white-space: pre-wrap;
   }
   
+  span {
+    width: 60px;
+    text-align: center;
+    background-color: #77dd77;
+  }
+  
   .time-block {
     text-align: center;
     border-radius: 15px;
@@ -63,7 +69,7 @@ body {
     border-bottom-right-radius: 15px;
     background-color: #06aed5;
     color: white;
-  }
+ }
   
   .saveBtn i:hover {
     font-size: 20px;
